--- a/demo01.xcanal/xcanal-sidecar/pom.xml
+++ b/demo01.xcanal/xcanal-sidecar/pom.xml
@@ -17,5 +17,17 @@
     <version>demo</version>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>solon.extend.schedule</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.noear.socketd.demo01.xcanal</groupId>
+            <artifactId>xcanal-base</artifactId>
+            <version>demo</version>
+        </dependency>
+    </dependencies>
 
 </project>
