--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.noear</groupId>
-        <artifactId>solon-parent</artifactId>
-        <version>1.2.8</version>
-    </parent>
-
+    <groupId>org.noear</groupId>
     <artifactId>solon_socketd_demo</artifactId>
     <version>demo</version>
     <packaging>pom</packaging>
@@ -17,7 +12,17 @@
     <description>Java project for socketd demo</description>
 
     <modules>
-        <module>demo01.xcanal</module>
+        <module>demo01.send/demo01.client</module>
+        <module>demo01.send/demo01.server</module>
+
+        <module>demo02.session/demo02.client</module>
+        <module>demo02.session/demo02.server</module>
+
+        <module>demo03.subscribe/demo03.client</module>
+        <module>demo03.subscribe/demo03.server</module>
+
+        <module>demo04.rpc</module>
+        <module>demo05.rpcd</module>
     </modules>
 
 </project>
