--- a/demo03.subscribe/demo03.server/pom.xml
+++ b/demo03.subscribe/demo03.server/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>solon-parent</artifactId>
-        <version>1.2.18</version>
+        <version>1.2.19</version>
     </parent>
 
     <artifactId>demo03.server</artifactId>
@@ -16,8 +16,11 @@
 
     <description>Java project for socketd demo</description>
 
-    <modules>
-        
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>solon.boot.socketd.smartsocket</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
