--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
         <module>demo03.subscribe/demo03.client</module>
         <module>demo03.subscribe/demo03.server</module>
 
+        <module>demo04.rpc/demo04.client</module>
+        <module>demo04.rpc/demo04.interface</module>
+        <module>demo04.rpc/demo04.server</module>
+
+        <module>demo05.rpcd/demo05.client</module>
+        <module>demo05.rpcd/demo05.interface</module>
+        <module>demo05.rpcd/demo05.server</module>
     </modules>
 
 </project>
