--- a/demo04.rpc/demo04.client/pom.xml
+++ b/demo04.rpc/demo04.client/pom.xml
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>solon.boot.socketd.smartsocket</artifactId>
+            <artifactId>solon.socketd.client.smartsocket</artifactId>
         </dependency>
 
         <dependency>
