--- a/demo05.rpcd/demo05.client/pom.xml
+++ b/demo05.rpcd/demo05.client/pom.xml
@@ -25,12 +25,17 @@
 
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>solon.boot.socketd.smartsocket</artifactId>
+            <artifactId>solon.socketd.client.smartsocket</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.noear</groupId>
             <artifactId>nami.coder.snack3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>solon.serialization.snack3</artifactId>
         </dependency>
     </dependencies>
 
