--- a/demo05.rpcd/demo05.server/pom.xml
+++ b/demo05.rpcd/demo05.server/pom.xml
@@ -32,6 +32,11 @@
             <groupId>org.noear</groupId>
             <artifactId>solon.serialization.snack3</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>nami.coder.snack3</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
