--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
         <module>demo01.send/demo01.client</module>
         <module>demo01.send/demo01.server</module>
 
+        <module>demo01.send.auth/demo01.client.auth</module>
+        <module>demo01.send.auth/demo01.server.auth</module>
+
         <module>demo02.session/demo02.client</module>
         <module>demo02.session/demo02.server</module>
 
