--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
         <module>demo03.subscribe/demo03.client</module>
         <module>demo03.subscribe/demo03.server</module>
 
+        <module>demo03.subscribe.auth/demo03.client.auth</module>
+        <module>demo03.subscribe.auth/demo03.server.auth</module>
+
         <module>demo04.rpc/demo04.client</module>
         <module>demo04.rpc/demo04.interface</module>
         <module>demo04.rpc/demo04.server</module>
