--- a/demo01.send.encrypt/demo01.server.encrypt/pom.xml
+++ b/demo01.send.encrypt/demo01.server.encrypt/pom.xml
@@ -21,6 +21,11 @@
             <groupId>org.noear</groupId>
             <artifactId>solon.boot.socketd.smartsocket</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>nami</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
