--- a/demo04.rpc/demo04.client/pom.xml
+++ b/demo04.rpc/demo04.client/pom.xml
@@ -33,6 +33,11 @@
             <groupId>org.noear</groupId>
             <artifactId>nami.coder.snack3</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>nami.channel.socketd.smartsocket</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
