--- a/demo03.subscribe/demo03.server/pom.xml
+++ b/demo03.subscribe/demo03.server/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>solon-parent</artifactId>
-        <version>1.7.6</version>
+        <version>1.7.7</version>
         <relativePath />
     </parent>
 
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>solon.boot.socketd.smartsocket</artifactId>
+            <artifactId>solon.boot.socketd.netty</artifactId>
         </dependency>
     </dependencies>
 
