--- a/demo10.websocket/pom.xml
+++ b/demo10.websocket/pom.xml
@@ -22,6 +22,17 @@
             <groupId>org.noear</groupId>
             <artifactId>solon.boot.websocket</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>nami.channel.socketd.websocket</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>solon-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
