--- a/demo10.websocket/pom.xml
+++ b/demo10.websocket/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>solon-parent</artifactId>
-        <version>1.10.6</version>
+        <version>1.10.8</version>
         <relativePath />
     </parent>
 
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>nami.channel.socketd.websocket</artifactId>
+            <artifactId>solon.socketd.client.websocket</artifactId>
         </dependency>
 
         <dependency>
